Layout bugfixes

--- a/src/css/cards.scss
+++ b/src/css/cards.scss
@@ -263,7 +263,7 @@ img {
 .explain .content h3 {
 	margin-left: -2vw;
 	width: 17vw;
-  min-width: 216px;
+  min-width: 232px;
 }
 
 .mosaic .slides::before {
